platter-compiler-sveltejs/static/python/tests/syntax_programs/valid_tests/test_scripts_81-100_valid.platter

sip of pi = 3.14;

prepare sip of circumference(piece of r){
        serve 2*pi*r;
}

start() {
  piece of a = 5/2 + 13;
piece of x = 5;
piece of y = (x + 3);
        sip of c = circumference(3);
        chars of ans = tochars(c); order{
      menu(a){
          choice 1:
              next;
              serve 1;
          choice 2:
              order{} repeat (a > 0);
      }
    } repeat(a > 3);
        menu(a){
            choice 1:
        choice 2:
                order{} repeat (a > 0);
    }
        bill("The answer is: " + ans);
ans = tochars(y);
bill(ans);
}