platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_100.platter
sip of a = pow(x,2)/sqrt(cut(y,1,3)) + fact(n);
start(){}